force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description>Expense associated with a property</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{00000}</displayFormat>
        <label>Expense Reference</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>