force-app/main/default/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent/Lease</fullName>
            </value>
            <value>
                <fullName>Cleaning Fee</fullName>
            </value>
            <value>
                <fullName>Cleaning Supplies/Products</fullName>
            </value>
            <value>
                <fullName>Utilities/Bills</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>